# tcpgen

./: .gitignore  Cargo.toml
anomalies/: anomalylist.txt
conditions/: conditionlist.txt
modifiers/: modlist.txt
src/: console.rs  lib.rs  web.rs
types/: random
types/mraof/: abstract.txt  body.txt  form.txt  weapon.txt
types/sorted/: abstract.txt  form.txt  machine.txt
